Tests/ShouldFail/DoubleLabel.adl
CONTEXT Test

INTERFACE Overview : I[ONE]
  BOX [ l : V[ONE]
      , l : V[ONE]
      ]

ENDCONTEXT
